--- a/Week-1/Zerodha/index.html
+++ b/Week-1/Zerodha/index.html
@@ -6,29 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zerodha</title>
     <link rel="stylesheet" href=".">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <style>
+        div span {
+            font-family: "Inter", sans-serif;
+            padding: 20px;
+            color: #666;
+        }
+
+        div span:hover {
+            cursor: pointer;
+            color: #387ed1;
+        }
+        main .img{
+            margin: 60px 0px;
+        }
+        
+        h1,
+        h3{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 </head>
 
 <head>
-    <div class="topbar">
-        <span class="topbarlogo">
-            <img width="150px" src="https://zerodha.com/static/images/logo.svg" alt="zerodha logo">
-        </span>
-        <span>Signup</span>
-        <span> About </span>
-        <span> Products </span>
-        <span>Pricing</span>
-        <span>Support</span>
+    <div class="topbar"
+        style="display: flex; justify-content: space-between; padding: 10px 100px;box-shadow: 2px 1px 2px #eee;">
+        <div>
+            <span class="topbarlogo">
+                <img width="170px" src="https://zerodha.com/static/images/logo.svg" alt="zerodha logo">
+            </span>
+        </div>
+        <div>
+            <span>Signup</span>
+            <span> About </span>
+            <span> Products </span>
+            <span>Pricing</span>
+            <span>Support</span>
+        </div>
     </div>
-</head>
-<br><br><br><br><br>
-<center>
-    <img width="800px" src="https://zerodha.com/static/images/landing.png" alt="Zerodha Ui Main Page">
-    <h1>Invest in everything
-    </h1>
-    <h3>Online platform to invest in stocks, derivatives, mutual funds, and more
-    </h3>
-    <button>Sign up now</button>
-</center>
-</body>
+    <main>
+        <div style="display: flex; justify-content: center;">
+            <img class="img" width="800px" src="https://zerodha.com/static/images/landing.png" alt="Zerodha Ui Main Page">
+        </div>
+        <div style="display: flex; justify-content: center;">
+            <h1>Invest in everything
+            </h1>
+        </div>
+        <div style="display: flex; justify-content: center;">
+            <h3>Online platform to invest in stocks, derivatives, mutual funds, and more
+            </h3>
+        </div>
+        <div style="display: flex; justify-content: center;">
+            <button>Sign up now</button>
+        </div>
 
+    </main>
+</body>
 </html>
