Fix - Final Zerodha Landing Page

--- a/Week-1/Zerodha/index.html
+++ b/Week-1/Zerodha/index.html
@@ -60,7 +60,7 @@
 </head>
 
 <head>
-    <div class="topbar"
+    <div class="topbar" id="topbar"
         style="display: flex; justify-content: space-between; padding: 10px 100px;box-shadow: 2px 1px 2px #eee;">
         <div>
             <span class="topbarlogo">
@@ -89,7 +89,7 @@
             </h3>
         </div>
         <div style="display: flex; justify-content: center;">
-            <a href="/">Sign up now</a>
+            <a href="#topbar">Sign up now</a>
         </div>
 
     </main>
